--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@
 
       <nav>
         <a href="#">
-          <img src="./images/pr_bar.png" alt="line" />
+          <img class="red-hover" src="./images/line_empty.png" alt="line" />
           <h4><span>01</span> INTRO</h4>
         </a>
         <a href="#">
-          <img src="./images/line_empty.png" alt="" />
+          <img src="./images/line_empty.png" alt="line" />
           <h4><span>02</span> WORK</h4>
         </a>
         <a href="#">
-          <img src="./images/line_empty.png" alt="" />
+          <img src="./images/line_empty.png" alt="line" />
           <h4><span>03</span> ABOUT</h4>
         </a>
         <a href="#">
-          <img src="./images/line_empty.png" alt="" />
+          <img src="./images/line_empty.png" alt="line" />
           <h4><span>04</span> CONTACTS</h4>
         </a>
       </nav>
@@ -67,12 +67,11 @@
       <section class="about">
         <h5>What we do</h5>
         <h2>Story About us</h2>
-        <img src="" alt="" />
+        <img class="line-red" src="./images/line_empty.png" alt="line" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolorum
           excepturi, dicta esse tempore totam numquam maxime? Accusamus ducimus
-          in eum repellendus possimus nam! Corporis voluptatum numquam, vel
-          ullam eos omnis perspiciatis amet molestias! Nemo, ab.
+          in eum repellendus possimus nam! Corporis voluptatum numquam!
         </p>
         <div>
           <img src="./images/super_team.png" alt="super_team" />
@@ -81,5 +80,30 @@
         </div>
       </section>
     </div>
+      <section class="numbers">
+        <div class="row">
+          <div>
+            <h6>42</h6>
+            <p>WEB DESING PROJECTS</p>
+          </div>
+          <div>
+            <h6>123</h6>
+            <p>HAPPY CLIENTS</p>
+          </div>
+          <div>
+            <h6>15</h6>
+            <p>AWARD WINNER</p>
+          </div>
+          <div>
+            <h6>99</h6>
+            <p>CUP OF COFFEE</p>
+          </div>
+          <div>
+            <h6>24</h6>
+            <p>MEMBERS</p>
+          </div>
+      </div>
+      </section>
+   
   </body>
 </html>
