section numbers done

--- a/index.html
+++ b/index.html
@@ -82,26 +82,32 @@
     </div>
       <section class="numbers">
         <div class="row">
+          <div class="vertical"></div>
           <div>
             <h6>42</h6>
             <p>WEB DESING PROJECTS</p>
           </div>
+          <div class="vertical"></div>
           <div>
             <h6>123</h6>
             <p>HAPPY CLIENTS</p>
           </div>
+          <div class="vertical"></div>
           <div>
             <h6>15</h6>
             <p>AWARD WINNER</p>
           </div>
+          <div class="vertical"></div>
           <div>
             <h6>99</h6>
             <p>CUP OF COFFEE</p>
           </div>
+          <div class="vertical"></div>
           <div>
             <h6>24</h6>
             <p>MEMBERS</p>
           </div>
+          <div class="vertical"></div>
       </div>
       </section>
    
