services section done

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </li>
         </ul>
       </nav>
-      <h3>Creative Template</h3>
+      <h2>Creative Template</h2>
       <h1>
         WELCOME <br />
         TO MOGO
@@ -80,36 +80,120 @@
         </div>
       </section>
     </div>
-      <section class="numbers">
-        <div class="row">
-          <div class="vertical"></div>
-          <div>
-            <h6>42</h6>
-            <p>WEB DESING PROJECTS</p>
-          </div>
-          <div class="vertical"></div>
-          <div>
-            <h6>123</h6>
-            <p>HAPPY CLIENTS</p>
-          </div>
-          <div class="vertical"></div>
-          <div>
-            <h6>15</h6>
-            <p>AWARD WINNER</p>
-          </div>
-          <div class="vertical"></div>
-          <div>
-            <h6>99</h6>
-            <p>CUP OF COFFEE</p>
-          </div>
-          <div class="vertical"></div>
-          <div>
-            <h6>24</h6>
-            <p>MEMBERS</p>
-          </div>
-          <div class="vertical"></div>
+    <section class="numbers">
+      <div class="row">
+        <div class="vertical"></div>
+        <div>
+          <h6>42</h6>
+          <p>WEB DESING PROJECTS</p>
+        </div>
+        <div class="vertical"></div>
+        <div>
+          <h6>123</h6>
+          <p>HAPPY CLIENTS</p>
+        </div>
+        <div class="vertical"></div>
+        <div>
+          <h6>15</h6>
+          <p>AWARD WINNER</p>
+        </div>
+        <div class="vertical"></div>
+        <div>
+          <h6>99</h6>
+          <p>CUP OF COFFEE</p>
+        </div>
+        <div class="vertical"></div>
+        <div>
+          <h6>24</h6>
+          <p>MEMBERS</p>
+        </div>
+        <div class="vertical"></div>
       </div>
+    </section>
+
+    <div class="wrapper">
+      <section class="services">
+        <h5>We work width</h5>
+        <h2>AMAZING SERVICES</h2>
+        <img class="line-red" src="./images/line_empty.png" alt="line" />
+        <div>
+          <div>
+            <div class="small-icon">
+              <img src="./images/alarm.png" alt="alarm-clock" />
+            </div>
+            <div>
+            <h3>PHOTOGRAPHY</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur <br />
+              adipisicing elit, sed do eiusmod tempor.
+            </p>
+          </div>
+          </div>
+          <div>
+            <div class="small-icon">
+              <img src="./images/line-graph.png" alt="line-graph" />
+            </div>
+            <div>
+            <h3>WEB DESING</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur <br />
+              adipisicing elit, sed do eiusmod tempor.
+            </p>
+          </div>
+          </div>
+          <div>
+            <div class="small-icon">
+              <img src="./images/computer_ok.png" alt="computer" />
+            </div>
+            <div>
+            <h3>CREARTIVITY</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur <br />
+              adipisicing elit, sed do eiusmod tempor.
+            </p>
+          </div>
+          </div>
+        </div>
+        <div class="horizontal-line"></div>
+        <div>
+          <div>
+            <div class="small-icon">
+              <img src="./images/book_seo.png" alt="book_seo" />
+            </div>
+            <div>
+            <h3>SEO</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur <br />
+              adipisicing elit, sed do eiusmod tempor.
+            </p>
+          </div>
+          </div>
+          <div>
+            <div class="small-icon">
+              <img src="./images/home.png" alt="home" />
+            </div>
+            <div>
+            <h3>CSS/HTML</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur <br />
+              adipisicing elit, sed do eiusmod tempor.
+            </p>
+          </div>
+          </div>
+          <div>
+            <div class="small-icon">
+              <img src="./images/image.png" alt="image" />
+            </div>
+            <div>
+            <h3>DIGITAL</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur <br />
+              adipisicing elit, sed do eiusmod tempor.
+            </p>
+          </div>
+          </div>
+        </div>
       </section>
-   
+    </div>
   </body>
 </html>
