hover effect fixed

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <nav>
         <a href="#">
-          <img class="red-hover" src="./images/line_empty.png" alt="line" />
+          <img src="./images/line_empty.png" alt="line" />
           <h4><span>01</span> INTRO</h4>
         </a>
         <a href="#">
@@ -73,8 +73,8 @@
           excepturi, dicta esse tempore totam numquam maxime? Accusamus ducimus
           in eum repellendus possimus nam! Corporis voluptatum numquam!
         </p>
-        <div>
-          <img src="./images/super_team.png" alt="super_team" />
+        <div class="img-hovered">
+          <img src="./images/desk-computer.jpg" alt="desk-computer" />
           <img src="./images/headphones.jpg" alt="headphones" />
           <img src="./images/desk.jpg" alt="desk" />
         </div>
