desing section done

--- a/index.html
+++ b/index.html
@@ -45,22 +45,21 @@
       <input type="button" value="LEARN MORE" />
 
       <nav>
-        <a href="#">
-          <img src="./images/line_empty.png" alt="line" />
+        <button class="second-row">
           <h4><span>01</span> INTRO</h4>
-        </a>
-        <a href="#">
-          <img src="./images/line_empty.png" alt="line" />
+        </button>
+
+        <button class="second-row">
           <h4><span>02</span> WORK</h4>
-        </a>
-        <a href="#">
-          <img src="./images/line_empty.png" alt="line" />
+        </button>
+
+        <button class="second-row">
           <h4><span>03</span> ABOUT</h4>
-        </a>
-        <a href="#">
-          <img src="./images/line_empty.png" alt="line" />
+        </button>
+
+        <button class="second-row">
           <h4><span>04</span> CONTACTS</h4>
-        </a>
+        </button>
       </nav>
     </header>
     <div class="wrapper">
@@ -122,36 +121,36 @@
               <img src="./images/alarm.png" alt="alarm-clock" />
             </div>
             <div>
-            <h3>PHOTOGRAPHY</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipisicing elit, sed do eiusmod tempor.
-            </p>
-          </div>
+              <h3>PHOTOGRAPHY</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur <br />
+                adipisicing elit, sed do eiusmod tempor.
+              </p>
+            </div>
           </div>
           <div>
             <div class="small-icon">
               <img src="./images/line-graph.png" alt="line-graph" />
             </div>
             <div>
-            <h3>WEB DESING</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipisicing elit, sed do eiusmod tempor.
-            </p>
-          </div>
+              <h3>WEB DESING</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur <br />
+                adipisicing elit, sed do eiusmod tempor.
+              </p>
+            </div>
           </div>
           <div>
             <div class="small-icon">
               <img src="./images/computer_ok.png" alt="computer" />
             </div>
             <div>
-            <h3>CREARTIVITY</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipisicing elit, sed do eiusmod tempor.
-            </p>
-          </div>
+              <h3>CREARTIVITY</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur <br />
+                adipisicing elit, sed do eiusmod tempor.
+              </p>
+            </div>
           </div>
         </div>
         <div class="horizontal-line"></div>
@@ -161,39 +160,47 @@
               <img src="./images/book_seo.png" alt="book_seo" />
             </div>
             <div>
-            <h3>SEO</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipisicing elit, sed do eiusmod tempor.
-            </p>
-          </div>
+              <h3>SEO</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur <br />
+                adipisicing elit, sed do eiusmod tempor.
+              </p>
+            </div>
           </div>
           <div>
             <div class="small-icon">
               <img src="./images/home.png" alt="home" />
             </div>
             <div>
-            <h3>CSS/HTML</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipisicing elit, sed do eiusmod tempor.
-            </p>
-          </div>
+              <h3>CSS/HTML</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur <br />
+                adipisicing elit, sed do eiusmod tempor.
+              </p>
+            </div>
           </div>
           <div>
             <div class="small-icon">
               <img src="./images/image.png" alt="image" />
             </div>
             <div>
-            <h3>DIGITAL</h3>
-            <p>
-              Lorem ipsum dolor sit amet, consectetur <br />
-              adipisicing elit, sed do eiusmod tempor.
-            </p>
-          </div>
+              <h3>DIGITAL</h3>
+              <p>
+                Lorem ipsum dolor sit amet, consectetur <br />
+                adipisicing elit, sed do eiusmod tempor.
+              </p>
+            </div>
           </div>
         </div>
       </section>
     </div>
+    <section class="design">
+      <div class="wrapper">
+        <h5>For all devices</h5>
+        <h2>UNIQUE DESING</h2>
+        <img class="line-red" src="./images/line_empty.png" alt="line" />
+        <img class="phones" src="./images/phones.png" alt="phones">
+      </div>
+    </section>
   </body>
 </html>
