started section weDo

--- a/index.html
+++ b/index.html
@@ -199,7 +199,40 @@
         <h5>For all devices</h5>
         <h2>UNIQUE DESING</h2>
         <img class="line-red" src="./images/line_empty.png" alt="line" />
-        <img class="phones" src="./images/phones.png" alt="phones">
+        <img class="phones" src="./images/phones.png" alt="phones" />
+      </div>
+    </section>
+    <section class="weDo">
+      <div class="wrapper">
+        <h5>Service</h5>
+        <h2>WHAT WE DO</h2>
+        <img class="line-red" src="./images/line_empty.png" alt="line" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolorum
+          excepturi, dicta esse tempore totam numquam maxime? Accusamus ducimus
+          in eum repellendus possimus nam! Corporis voluptatum numquam!
+        </p>
+        <div class="creativity">
+          <div>
+            <img class="wall" src="./images/photography.jpg" alt="white wall" />
+          </div>
+          <div>
+            <div>
+              <img src="./images/photography.png" alt="photography" />
+              <h3>PHOTOGRAPHY</h3>
+            </div>
+            <div>
+              <img src="./images/equalizer.png" alt="equalizer" />
+              <h3>CREARTIVITY</h3>
+              <img src="./images/arrow_down.png" alt="arrow_down">
+            </div>
+            <div>
+              <img src="./images/bullseye.png" alt="bullseye" />
+              <h3>WEB DESING</h3>
+              <img src="./images/arrow_down.png" alt="arrow_down">
+            </div>
+          </div>
+        </div>
       </div>
     </section>
   </body>
