started section weDo

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
             <div>
               <img src="./images/photography.png" alt="photography" />
               <h3>PHOTOGRAPHY</h3>
+              <img src="./images/arrow_down.png" alt="arrow_down">
             </div>
             <div>
               <img src="./images/equalizer.png" alt="equalizer" />
