--- a/index.html
+++ b/index.html
@@ -213,24 +213,37 @@
           in eum repellendus possimus nam! Corporis voluptatum numquam!
         </p>
         <div class="creativity">
-          <div>
+          <div class="left">
             <img class="wall" src="./images/photography.jpg" alt="white wall" />
           </div>
-          <div>
-            <div>
-              <img src="./images/photography.png" alt="photography" />
+          <div class="right">
+            <div >
+              <a href="#"><img src="./images/photography.png" alt="photography" /></a>
               <h3>PHOTOGRAPHY</h3>
-              <img src="./images/arrow_down.png" alt="arrow_down">
+              <a href="#"><img src="./images/arrow_up.png" alt="arrow_down"></a>
             </div>
             <div>
-              <img src="./images/equalizer.png" alt="equalizer" />
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                Tenetur inventore adipisci voluptatem temporibus beatae amet
+                orro ipsam explicabo provident. Quas commodi consequatur 
+                deleniti ullam earum neque a voluptatum quo vel amet.
+                Quas commodi consequatur amet
+                Quas commodi consequatur amet Quas commodi 
+                deleniti ullam earum neque a voluptatum quo vel amet.
+                deleniti ullam earum neque a voluptatum quo vel amet.
+              </p>
+              <a href="#"><img src="./images/scroll.png" alt="scroll"></a>
+            </div>
+            <div>
+              <a href="#"><img src="./images/equalizer.png" alt="equalizer" /></a>
               <h3>CREARTIVITY</h3>
-              <img src="./images/arrow_down.png" alt="arrow_down">
+              <a href="#"><img src="./images/arrow_down.png" alt="arrow_down"></a>
             </div>
             <div>
-              <img src="./images/bullseye.png" alt="bullseye" />
+              <a href="#"><img src="./images/bullseye.png" alt="bullseye" /></a>
               <h3>WEB DESING</h3>
-              <img src="./images/arrow_down.png" alt="arrow_down">
+              <a href="#"><img src="./images/arrow_down.png" alt="arrow_down"></a>
             </div>
           </div>
         </div>
