slides section done

--- a/index.html
+++ b/index.html
@@ -217,36 +217,69 @@
             <img class="wall" src="./images/photography.jpg" alt="white wall" />
           </div>
           <div class="right">
-            <div >
-              <a href="#"><img src="./images/photography.png" alt="photography" /></a>
+            <div>
+              <a href="#"
+                ><img src="./images/photography.png" alt="photography"
+              /></a>
               <h3>PHOTOGRAPHY</h3>
-              <a href="#"><img src="./images/arrow_up.png" alt="arrow_down"></a>
+              <a href="#"
+                ><img src="./images/arrow_up.png" alt="arrow_down"
+              /></a>
             </div>
             <div>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                Tenetur inventore adipisci voluptatem temporibus beatae amet
-                orro ipsam explicabo provident. Quas commodi consequatur 
-                deleniti ullam earum neque a voluptatum quo vel amet.
-                Quas commodi consequatur amet
-                Quas commodi consequatur amet Quas commodi 
-                deleniti ullam earum neque a voluptatum quo vel amet.
-                deleniti ullam earum neque a voluptatum quo vel amet.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur
+                inventore adipisci voluptatem temporibus beatae amet orro ipsam
+                explicabo provident. Quas commodi consequatur deleniti ullam
+                earum neque a voluptatum quo vel amet. Quas commodi consequatur
+                amet Quas commodi consequatur amet Quas commodi deleniti ullam
+                earum neque a voluptatum quo vel amet. deleniti ullam earum
+                neque a voluptatum quo vel amet.
               </p>
-              <a href="#"><img src="./images/scroll.png" alt="scroll"></a>
+              <a href="#"><img src="./images/scroll.png" alt="scroll" /></a>
             </div>
             <div>
-              <a href="#"><img src="./images/equalizer.png" alt="equalizer" /></a>
+              <a href="#"
+                ><img src="./images/equalizer.png" alt="equalizer"
+              /></a>
               <h3>CREARTIVITY</h3>
-              <a href="#"><img src="./images/arrow_down.png" alt="arrow_down"></a>
+              <a href="#"
+                ><img src="./images/arrow_down.png" alt="arrow_down"
+              /></a>
             </div>
             <div>
               <a href="#"><img src="./images/bullseye.png" alt="bullseye" /></a>
               <h3>WEB DESING</h3>
-              <a href="#"><img src="./images/arrow_down.png" alt="arrow_down"></a>
+              <a href="#"
+                ><img src="./images/arrow_down.png" alt="arrow_down"
+              /></a>
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <section class="slides">
+      <div class="wrapper">
+        <div  id="left-arrow">
+        <a href=""><img src="./images/arrow_down.png" alt="arrow"></a></div>
+        <div class="center">
+          <div>
+            <img class="chat-border" src="./images/chat.png" alt="chat" />
+          </div>
+          <div>
+            <p>
+              "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              erim ad minim venima, quis nostrum exercitation."
+            </p>
+            <div class="first">
+              <img class="line-red" src="./images/line_empty.png" alt="line" />
+              <h5>Jon Doe</h5>
+            </div>
+          </div>
+        </div>
+        <div id="right-arrow">
+        <a href=""><img src="./images/arrow_down.png" alt="arrow"></a></div>
       </div>
     </section>
   </body>
