fixed section ourTeam

--- a/index.html
+++ b/index.html
@@ -300,22 +300,37 @@
           excepturi, dicta esse tempore totam numquam maxime? Accusamus ducimus
           in eum repellendus possimus nam! Corporis voluptatum numquam!
         </p>
-        <div>
+        <div class="team">
+          <a href="#" class="left">
           <div class="member">
             <img src="./images/matthew_dix.jpg" alt="matthew_dix">
+            <div>
+              <img src="images/share.png" alt="share">
+            </div>
+          </div>
             <h3>MATTEW DIX</h3>
             <p>Graphic Design</p>
-          </div>
+          </a>
+          <a href="#" class="center">
           <div class="member">
             <img src="./images/christopher_cambell.jpg" alt="christopher_cambell">
+            <div>
+              <img src="images/share.png" alt="share">
+            </div>
+          </div>
             <h3>CHRISTOPHER CAMBELL</h3>
             <p>Branding/UX deign</p>
-          </div>
+          </a>
+          <a href="#" class="right">
           <div class="member">
             <img src="./images/michael_fertig.jpg" alt="michael_fertig">
+            <div>
+              <img src="images/share.png" alt="share">
+            </div>
+          </div>
             <h3>MICHAEL FERTIG</h3>
             <p>Developer</p>
-          </div>
+          </a>
         </div>
       </div>
     </section>
