--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@
         <h5>For all devices</h5>
         <h2>UNIQUE DESING</h2>
         <img class="line-red" src="./images/line_empty.png" alt="line" />
-        <img class="phones" src="./images/phones.png" alt="phones" />
+        <div >
+        <img  src="./images/phones.png" alt="phones" />
+      </div>
       </div>
     </section>
     <section class="weDo">
@@ -349,6 +351,23 @@
           excepturi, dicta esse tempore totam numquam maxime? Accusamus ducimus
           in eum repellendus possimus nam! Corporis voluptatum numquam!
         </p>
+        </div>
+      </section>
+      <section class="wallpaper">
+        <div class="first">
+          <a href="#"></a>
+          <a href=""></a>
+        </div>
+        <div class="second">
+          <a href="#"></a>
+          <a href="#"></a>
+        </div>
+        <div class="third">
+          <a href="#"></a>
+        </div>
+        <div class="fourth">
+          <a href="#"></a>
+          <a href="#"></a>
         </div>
       </section>
   </body>
