--- a/index.html
+++ b/index.html
@@ -370,5 +370,23 @@
           <a href="#"></a>
         </div>
       </section>
+      <section class="slides2">
+        <div class="wrapper">
+          <a class="first">
+            <img src="./images/arrow_down.png" alt="arrow">
+          </a>
+          <div class="second">
+            <img src="./images/johua earle .png" alt="Joshua Earle">
+          </div>
+          <div class="third">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis saepe repudiandae cum nemo quisquam iste ex
+              facilis quo molestias officiis accusamus eius inventore cupiditate modi, ducimus quas a? Totam, dolore!</p>
+            <h6>Joshua Earle</h6>
+          </div>
+          <a class="fourth">
+            <img src="./images/arrow_down.png" alt="arrow">
+          </a>
+        </div>
+      </section>
   </body>
 </html>
