--- a/index.html
+++ b/index.html
@@ -388,5 +388,68 @@
           </a>
         </div>
       </section>
+      <section class="clients">
+        <div class="wrapper">
+          <h5>Happy Clients</h5>
+          <h2>WHAT PEOPLE SAY</h2>
+          <div class="top-row">
+            <div class="first">
+              <div>
+                <img src="./images/matthew_dix.png" alt="matthew_dix">
+              </div>
+              <div>
+                <h3>MATTEW DIX</h3>
+                <p class="sloping">Graphic Desing</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                  sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Ut enim ad minim.
+                </p>
+              </div>
+            </div>
+            <div class="second">
+              <div>
+                <img src="./images/nick_karvounis.png" alt="nick_karvounis">
+              </div>
+              <div>
+                <h3>NICK KARVOUNIS</h3>
+                <p class="sloping">Graphic Desing</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                  sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Ut enim ad minim.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="bottom-row">
+            <div class="first">
+              <div>
+                <img src="./images/jaelynn_castillo.png" alt="jaelynn_castillo">
+              </div>
+              <div>
+                <h3>JAELYNN CASTILO</h3>
+                <p class="sloping">Graphic Desing</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                  sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Ut enim ad minim.
+                </p>
+              </div>
+            </div>
+            <div class="second">
+              <div>
+                <img src="./images/mike_petrucci.png" alt="mike_petrucci">
+              </div>
+              <div>
+                <h3>MIKE PETRUCCI</h3>
+                <p class="sloping">Graphic Desing</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                  sed do eiusmod tempor incididunt ut labore et
+                  dolore magna aliqua. Ut enim ad minim.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
   </body>
 </html>
