fixed section aabout

--- a/index.html
+++ b/index.html
@@ -73,11 +73,28 @@
           excepturi, dicta esse tempore totam numquam maxime? Accusamus ducimus
           in eum repellendus possimus nam! Corporis voluptatum numquam!
         </p>
-        <div class="img-hovered">
+        <a href="#">
           <img src="./images/desk-computer.jpg" alt="desk-computer" />
+
+          <div class="super-team">
+            <img src="./images/users.png" alt="users" />
+            <h3>SUPER TEAM</h3>
+          </div>
+        </a>
+        <a href="#">
           <img src="./images/headphones.jpg" alt="headphones" />
+          <div class="super-team">
+            <img src="./images/users.png" alt="users" />
+            <h3>SUPER TEAM</h3>
+          </div>
+        </a>
+        <a href="#">
           <img src="./images/desk.jpg" alt="desk" />
-        </div>
+          <div class="super-team">
+            <img src="./images/users.png" alt="users" />
+            <h3>SUPER TEAM</h3>
+          </div>
+        </a>
       </div>
     </section>
 
@@ -387,7 +404,7 @@
           <img src="./images/arrow_down.png" alt="arrow" />
         </a>
         <div class="second">
-          <img src="./images/johua earle .png" alt="Joshua Earle" />
+          <img src="./images/johua-earle .png" alt="Joshua Earle" />
         </div>
         <div class="third">
           <p>
@@ -555,8 +572,8 @@
     </section>
 
     <section class="map">
-      <!-- <img src="./images/map.jpg" alt="map" /> -->
-      <a href="#" ><img class="location" src="./images/location.png" alt="location" />
+      <a href="#"
+        ><img class="location" src="./images/location.png" alt="location" />
         <p>OPEN MAP</p>
       </a>
     </section>
