--- a/index.html
+++ b/index.html
@@ -578,7 +578,93 @@
       </a>
     </section>
     <footer>
-
+      <div class="wrapper">
+        <div class="left">
+          <a href="">
+            <h2>MoGo</h2>
+          </a>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est at corporis aspernatur sapiente eos dolor modi,
+            delectus quam perspiciatis hic aliquam quibusdam sequi distinctio dolorem reiciendis vel voluptatum cum
+            explicabo.</p>
+  
+          <a href="#">
+            <h3>15k <span> followers</span></h3>
+          </a>
+          <div>
+            <div>
+              <h4>Follow Us:</h4>
+              <a href="#"><img src="images/facebook.png" alt="facebook"></a>
+              <a href="#"><img src="images/twitter.png" alt="twitter"></a>
+              <a href="#"><img src="images/instagram.png" alt="instagram"></a>
+              <a href="#"><img src="images/pinterest.png" alt="pinterest"></a>
+              <a href="#"><img src="images/google plus.png" alt="google plus"></a>
+              <a href="#"><img src="images/youtube.png" alt="youtube"></a>
+              <a href="#"><img src="images/dribbble.png" alt="dribble"></a>
+              <a href="#"><img src="images/tumblr.png" alt="tumblr"></a>
+            </div>
+  
+            <div>
+              <form>
+                <input type="text" value="Your Email...">
+                <button>subscribe</button>
+              </form>
+            </div>
+          </div>
+        </div>
+        <div class="center">
+          <a href="#">
+            <h3>BLOGS</h3>
+          </a>
+          <a>
+            <img src="images/blog_1.jpg" alt="">
+            <div>
+              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h3>
+              <p>Jan 9, 2016</p>
+            </div>
+          </a>
+          <a>
+            <img src="images/blog_2.jpg" alt="">
+            <div>
+              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h3>
+              <p>Jan 9, 2016</p>
+            </div>
+  
+          </a>
+          <a>
+            <img src="images/blog_3.jpg" alt="">
+            <div>
+              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h3>
+              <p>Jan 9, 2016</p>
+            </div>
+  
+          </a>
+        </div>
+  
+        <div class="right">
+          <a href="#">
+            <h3>INSTAGRAM</h3>
+          </a>
+          <div>
+            <a href="#"><img src="images/photos-1.jpg" alt=""></a>
+            <a href=""><img src="images/photos-2.jpg" alt=""></a>
+            <a href=""><img src="images/photos-3.jpg" alt=""></a>
+            <a href=""><img src="images/photos-4.jpg" alt=""></a>
+            <a href=""><img src="images/photos-5.jpg" alt=""></a>
+            <a href=""><img src="images/photos-6.jpg" alt=""></a>
+            <a href=""><img src="images/photos-7.jpg" alt=""></a>
+            <a href=""><img src="images/photos-8.jpg" alt=""></a>
+            <a href=""><img src="images/photos-9.jpg" alt=""></a>
+          </div>
+          <a href="">
+            <h4>View more photos</h4>
+          </a>
+  
+        </div>
+  
+      </div>
+      <a href="#">
+        <p>&copy 2016 MoGo free PSD template by <span>Laaqiq</span></p>
+      </a>
     </footer>
   </body>
 </html>
