--- a/index.html
+++ b/index.html
@@ -572,8 +572,7 @@
     </section>
 
     <section class="map">
-      <a href="#"
-        ><img class="location" src="./images/location.png" alt="location" />
+      <a href="#"><img class="location" src="./images/location.png" alt="location" />
         <p>OPEN MAP</p>
       </a>
     </section>
@@ -583,9 +582,12 @@
           <a href="">
             <h2>MoGo</h2>
           </a>
-          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est at corporis aspernatur sapiente eos dolor modi,
-            delectus quam perspiciatis hic aliquam quibusdam sequi distinctio dolorem reiciendis vel voluptatum cum
-            explicabo.</p>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Est at corporis aspernatur sapiente eos dolor modi,
+            delectus quam perspiciatis hic aliquam quibusdam sequi 
+            distinctio dolorem reiciendis vel voluptatum cum
+            explicabo.
+          </p>
   
           <a href="#">
             <h3>15k <span> followers</span></h3>
@@ -605,27 +607,25 @@
   
             <div>
               <form>
-                <input type="text" value="Your Email...">
-                <button>subscribe</button>
+                <input type="text" value="" placeholder="Your Email...">
+                <button>SUBSCRIBE</button>
               </form>
             </div>
           </div>
         </div>
         <div class="center">
+            <h2>BLOGS</h2>
           <a href="#">
-            <h3>BLOGS</h3>
-          </a>
-          <a>
             <img src="images/blog_1.jpg" alt="">
             <div>
-              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h3>
+              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing. </h3>
               <p>Jan 9, 2016</p>
             </div>
           </a>
           <a>
             <img src="images/blog_2.jpg" alt="">
             <div>
-              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h3>
+              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing. </h3>
               <p>Jan 9, 2016</p>
             </div>
   
@@ -633,7 +633,7 @@
           <a>
             <img src="images/blog_3.jpg" alt="">
             <div>
-              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing elit. </h3>
+              <h3>Lorem ipsum dolor, sit amet consectetur adipisicing. </h3>
               <p>Jan 9, 2016</p>
             </div>
   
@@ -661,10 +661,11 @@
   
         </div>
   
-      </div>
-      <a href="#">
+      
+      <div class="bottom">
         <p>&copy 2016 MoGo free PSD template by <span>Laaqiq</span></p>
-      </a>
+      </div>
+    </div>
     </footer>
   </body>
 </html>
