--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
       <div class="wrapper">
         <h5>What we do</h5>
         <h2>Story About us</h2>
-        <img class="line-red" src="./images/line_empty.png" alt="line" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolorum
           excepturi, dicta esse tempore totam numquam maxime? Accusamus ducimus
@@ -133,7 +132,6 @@
       <div class="wrapper">
         <h5>We work width</h5>
         <h2>AMAZING SERVICES</h2>
-        <img class="line-red" src="./images/line_empty.png" alt="line" />
         <div>
           <div>
             <div class="small-icon">
@@ -218,7 +216,6 @@
       <div class="wrapper">
         <h5>For all devices</h5>
         <h2>UNIQUE DESING</h2>
-        <img class="line-red" src="./images/line_empty.png" alt="line" />
         <div>
           <img src="./images/phones.png" alt="phones" />
         </div>
@@ -229,7 +226,6 @@
       <div class="wrapper">
         <h5>Service</h5>
         <h2>WHAT WE DO</h2>
-        <img class="line-red" src="./images/line_empty.png" alt="line" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolorum
           excepturi, dicta esse tempore totam numquam maxime? Accusamus ducimus
@@ -317,7 +313,6 @@
       <div class="wrapper">
         <h5>Who we are</h5>
         <h2>MEET OUR TEAM</h2>
-        <img class="line-red" src="./images/line_empty.png" alt="line" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolorum
           excepturi, dicta esse tempore totam numquam maxime? Accusamus ducimus
@@ -371,7 +366,6 @@
       <div class="wrapper">
         <h5>What we do</h5>
         <h2>SOME OF OUR WORKS</h2>
-        <img class="line-red" src="./images/line_empty.png" alt="line" />
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem dolorum
           excepturi, dicta esse tempore totam numquam maxime? Accusamus ducimus
@@ -382,8 +376,22 @@
 
     <section class="wallpaper">
       <div class="first">
-        <a href="#"></a>
-        <a href=""></a>
+        <a href="#">
+          <!-- <img src="./images/surf.jpg" alt="surf"> -->
+          <!-- <div class="overlay">
+            <img src="./images/photography.png" alt="photography" />
+            <h3>CREATIVELY DESIGNED</h3>
+            <p>Lorem ipsum dolor sit</p>
+          </div> -->
+        </a>
+        <a href="">
+          
+          <!-- <div class="overlay">
+            <img src="./images/photography.png" alt="photography" />
+            <h3>CREATIVELY DESIGNED</h3>
+            <p>Lorem ipsum dolor sit</p>
+          </div> -->
+        </a>
       </div>
       <div class="second">
         <a href="#"></a>
